--- a/main.tex
+++ b/main.tex
@@ -41,6 +41,10 @@
 \lstlistoflistings
 \pagebreak
 
+\section*{ACKNOWLEDGEMENTS}
+\pagebreak
+\section*{STATEMENT OF CANDIDATE}
+\pagebreak
 \section{Abstract}
 Cryptocurrencies form what is called the new decentralized finance world of digitial finances. They have become increasingly populor in the recent few years and with this technology becoming more and more accessible, the number of users of this form of payments have grown exponentially.On of the other side of coin, this mass usage of this technology gives a small percentage of people of hide in plain sight and do illegal activities. These people who are involved in such malicious activites are also supported by the anonymity features of this form of payments. \textbf{Our goal in this paper is to find ways to track down on these malicious transactions and to try and get as close as possible to the real world entity behind these activities.}
 \pagebreak
