Updates from Overleaf

--- a/citation.bib
+++ b/citation.bib
@@ -25,3 +25,18 @@
     year={2020}, 
     month={Sep}
 }
+@misc{blockchain.com, 
+    title={Blockchain.com Explorer: BTC: ETH: BCH},
+    url={https://www.blockchain.com/api}, 
+    journal={Blockchain.com}
+}
+@misc{bitcoinwhoswho, 
+    title={Bitcoin Address Lookup},
+    url={https://www.bitcoinwhoswho.com/}, 
+    journal={BitcoinWhosWho}
+}
+@misc{hashxp.org, 
+    title={Hash XP org},
+    url={https://hashxp.org/}, 
+    journal={HASHXP.org}
+}
