Updates from Overleaf

--- a/citation.bib
+++ b/citation.bib
@@ -40,6 +40,22 @@
     url={https://hashxp.org/}, 
     journal={HASHXP.org}
 }
-@misc{jochen_schäfer_christian_müller_and_frederik_..._-_petsymposium.org,                 
+@misc{muller,                 
    title={If You Like Me, Please Don’t “Like” Me: Inferring Vendor Bitcoin Addresses From Positive Reviews}, url={https://www.petsymposium.org/2022/files/papers/issue1/popets-2022-0022.pdf}
 }
+@misc{tracing_transactions_across_cryptocurrency_ledgers_-_usenix, 
+    title={Tracing transactions across Cryptocurrency ledgers},
+    url={https://www.usenix.org/system/files/sec19-yousaf_0.pdf}
+}
+@misc{dash_2022, 
+    title={Dash is digital cash you can spend anywhere}, 
+    url={https://www.dash.org/}, 
+    journal={Dash}, 
+    year={2022}, 
+    month={Jul}
+}
+@misc{getmonero.org, 
+    title={The Monero Project}, 
+    url={https://www.getmonero.org/}, 
+    journal={getmonero.org, The Monero Project}
+} 
