Updates from Overleaf

--- a/citation.bib
+++ b/citation.bib
@@ -69,3 +69,80 @@
     url={https://beautiful-soup-4.readthedocs.io/en/latest/#quick-start}, 
     journal={Beautiful Soup Documentation - Beautiful Soup 4.4.0 documentation}
 }
+@misc{tor_project_|_anonymity_online, 
+    title={The Tor Project: Privacy &amp; Freedom Online}, url={https://www.torproject.org/}, 
+    journal={Tor Project | Anonymity Online}
+}
+@article{wang2022zero,
+  title={On How Zero-Knowledge Proof Blockchain Mixers Improve, and Worsen User Privacy},
+  author={Wang, Zhipeng and Chaliasos, Stefanos and Qin, Kaihua and Zhou, Liyi and Gao, Lifeng and Berrang, Pascal and Livshits, Ben and Gervais, Arthur},
+  journal={arXiv preprint arXiv:2201.09035},
+  year={2022}
+}
+@book{narayanan2016bitcoin,
+  title={Bitcoin and cryptocurrency technologies: a comprehensive introduction},
+  author={Narayanan, Arvind and Bonneau, Joseph and Felten, Edward and Miller, Andrew and Goldfeder, Steven},
+  year={2016},
+  publisher={Princeton University Press}
+}
+@article{xueshuo2021awap,
+  title={AWAP: Adaptive weighted attribute propagation enhanced community detection model for bitcoin de-anonymization},
+  author={Xueshuo, Xie and Jiming, Wang and Junyi, Ye and Yaozheng, Fang and Ye, Lu and Tao, Li and Guiling, Wang},
+  journal={Applied Soft Computing},
+  volume={109},
+  pages={107507},
+  year={2021},
+  publisher={Elsevier}
+}
+@inproceedings{biryukov2019deanonymization,
+  title={Deanonymization and linkability of cryptocurrency transactions based on network analysis},
+  author={Biryukov, Alex and Tikhomirov, Sergei},
+  booktitle={2019 IEEE European symposium on security and privacy (EuroS\&P)},
+  pages={172--184},
+  year={2019},
+  organization={IEEE}
+}
+@article{hu2019characterizing,
+  title={Characterizing and detecting money laundering activities on the bitcoin network},
+  author={Hu, Yining and Seneviratne, Suranga and Thilakarathna, Kanchana and Fukuda, Kensuke and Seneviratne, Aruna},
+  journal={arXiv preprint arXiv:1912.12060},
+  year={2019}
+}
+@article{akcora2019bitcoinheist, 
+    title={BitcoinHeist: Topological Data Analysis for Ransomware Detection on the Bitcoin Blockchain}, 
+    author={Akcora, Cuneyt Gurcan and Li, Yitao and Gel, Yulia R and Kantarcioglu, Murat}, 
+    journal={arXiv preprint [Web Link]}, 
+    year={2019} 
+}
+@article{weber2019anti,
+  title={Anti-money laundering in bitcoin: Experimenting with graph convolutional networks for financial forensics},
+  author={Weber, Mark and Domeniconi, Giacomo and Chen, Jie and Weidele, Daniel Karl I and Bellei, Claudio and Robinson, Tom and Leiserson, Charles E},
+  journal={arXiv preprint arXiv:1908.02591},
+  year={2019}
+}
+@misc{elliptic, 
+    title={Blockchain Analytics &amp; Crypto Compliance Solutions}, 
+    url={http://www.elliptic.co/}, 
+    journal={Elliptic}
+}
+@misc{Silk_Road, 
+    title={Silk Road}, 
+    url={https://www.investopedia.com/terms/s/silk-road.asp}, 
+    author={Frankenfield, J.}
+}
+@article{hiramoto2020measuring,
+  title={Measuring dark web marketplaces via Bitcoin transactions: From birth to independence},
+  author={Hiramoto, Naoki and Tsuchiya, Yoichi},
+  journal={Forensic Science International: Digital Investigation},
+  volume={35},
+  pages={301086},
+  year={2020},
+  publisher={Elsevier}
+}
+@misc{Error_429, 
+    title={429 too many requests - http: MDN}, url={https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/429}, journal={HTTP | MDN}
+}
+@misc{asyncio, 
+    title={Asyncio - asynchronous I/O}, url={https://docs.python.org/3/library/asyncio.html}, 
+    journal={asyncio - Asynchronous I/O - Python 3.10.8 documentation}
+}
